third_party/blink/renderer/core/css/style_engine.h
@@ -70,6 +70,7 @@ class DocumentStyleEnvironmentVariables;
 class StyleRuleFontFace;
 class StyleRuleUsageTracker;
 class StyleSheetContents;
+class StyleInitialData;
 class ViewportStyleResolver;
 
 enum InvalidationScope { kInvalidateCurrentScope, kInvalidateAllScopes };
@@ -344,6 +345,8 @@ class CORE_EXPORT StyleEngine final
 
   DocumentStyleEnvironmentVariables& EnsureEnvironmentVariables();
 
+  scoped_refptr<StyleInitialData> MaybeCreateAndGetInitialData();
+
   void RecalcStyle(StyleRecalcChange change);
   void RebuildLayoutTree();
   bool InRebuildLayoutTree() const { return in_layout_tree_rebuild_; }
@@ -421,6 +424,7 @@ class CORE_EXPORT StyleEngine final
       const HeapHashSet<Member<RuleSet>>& changed_rule_sets,
       unsigned changed_rule_flags,
       InvalidationScope invalidation_scope);
+  void InvalidateInitialData();
 
   void UpdateViewport();
   void UpdateActiveUserStyleSheets();
@@ -518,6 +522,8 @@ class CORE_EXPORT StyleEngine final
   KeyframesRuleMap keyframes_rule_map_;
 
   scoped_refptr<DocumentStyleEnvironmentVariables> environment_variables_;
+
+  scoped_refptr<StyleInitialData> initial_data_;
 
   friend class StyleEngineTest;
 };
