third_party/blink/renderer/core/style/computed_style.h
@@ -82,6 +82,7 @@ class StyleContentAlignmentData;
 class StyleDifference;
 class StyleImage;
 class StyleInheritedVariables;
+class StyleInitialData;
 class StylePath;
 class StyleResolver;
 class StyleSelfAlignmentData;
@@ -1137,6 +1138,12 @@ class ComputedStyle : public ComputedStyleBase,
                                         bool is_inherited_property) const;
 
   const CSSValue* GetRegisteredVariable(const AtomicString&) const;
+
+  // Like GetRegisteredVariable, but returns nullptr if the computed value
+  // for the specified variable is the initial value.
+  const CSSValue* GetNonInitialRegisteredVariable(
+      const AtomicString&,
+      bool is_inherited_property) const;
 
   // Animations.
   CSSAnimationData& AccessAnimations();
@@ -2528,6 +2535,8 @@ class ComputedStyle : public ComputedStyleBase,
 
   StyleInheritedVariables& MutableInheritedVariables();
   StyleNonInheritedVariables& MutableNonInheritedVariables();
+
+  void SetInitialData(scoped_refptr<StyleInitialData>);
 
   PhysicalToLogical<const Length&> PhysicalMarginToLogical(
       const ComputedStyle& other) const {
