third_party/blink/renderer/core/css/style_engine_test.cc
@@ -13,6 +13,9 @@
 #include "third_party/blink/renderer/core/css/css_style_rule.h"
 #include "third_party/blink/renderer/core/css/css_style_sheet.h"
 #include "third_party/blink/renderer/core/css/parser/css_parser_context.h"
+#include "third_party/blink/renderer/core/css/property_descriptor.h"
+#include "third_party/blink/renderer/core/css/property_registration.h"
+#include "third_party/blink/renderer/core/css/property_registry.h"
 #include "third_party/blink/renderer/core/css/style_sheet_contents.h"
 #include "third_party/blink/renderer/core/dom/document.h"
 #include "third_party/blink/renderer/core/dom/first_letter_pseudo_element.h"
@@ -51,6 +54,10 @@ class StyleEngineTest : public testing::Test {
   };
   RuleSetInvalidation ScheduleInvalidationsForRules(TreeScope&,
                                                     const String& css_text);
+  void RegisterProperty(const String& name,
+                        const String& syntax,
+                        const String& initial_value,
+                        bool inherits);
 
  private:
   std::unique_ptr<DummyPageHolder> dummy_page_holder_;
@@ -76,6 +83,21 @@ StyleEngineTest::ScheduleInvalidationsForRules(TreeScope& tree_scope,
   rule_sets.insert(&rule_set);
   GetStyleEngine().ScheduleInvalidationsForRuleSets(tree_scope, rule_sets);
   return kRuleSetInvalidationsScheduled;
+}
+
+void StyleEngineTest::RegisterProperty(const String& name,
+                                       const String& syntax,
+                                       const String& initial_value,
+                                       bool inherits) {
+  DummyExceptionStateForTesting exception_state;
+  PropertyDescriptor* property_descriptor = PropertyDescriptor::Create();
+  property_descriptor->setName(name);
+  property_descriptor->setSyntax(syntax);
+  property_descriptor->setInitialValue(initial_value);
+  property_descriptor->setInherits(false);
+  PropertyRegistration::registerProperty(&GetDocument(), property_descriptor,
+                                         exception_state);
+  ASSERT_FALSE(exception_state.HadException());
 }
 
 TEST_F(StyleEngineTest, DocumentDirtyAfterInject) {
@@ -1607,6 +1629,33 @@ TEST_F(StyleEngineTest, FirstLetterRemoved) {
   EXPECT_TRUE(fl3);
   EXPECT_EQ(f3->lastChild()->GetLayoutObject(),
             fl3->RemainingTextLayoutObject());
+}
+
+TEST_F(StyleEngineTest, InitialDataCreation) {
+  GetDocument().View()->UpdateAllLifecyclePhases();
+
+  // There should be no initial data if nothing is registered.
+  EXPECT_FALSE(GetStyleEngine().MaybeCreateAndGetInitialData());
+
+  // After registering, there should be initial data.
+  RegisterProperty("--x", "<length>", "10px", false);
+  auto data1 = GetStyleEngine().MaybeCreateAndGetInitialData();
+  EXPECT_TRUE(data1);
+
+  // After a full recalc, we should have the same initial data.
+  GetDocument().body()->SetInnerHTMLFromString(
+      "<style>* { font-size: 1px; } </style>");
+  EXPECT_TRUE(GetDocument().NeedsStyleRecalc());
+  EXPECT_TRUE(GetDocument().ChildNeedsStyleRecalc());
+  GetDocument().View()->UpdateAllLifecyclePhases();
+  auto data2 = GetStyleEngine().MaybeCreateAndGetInitialData();
+  EXPECT_TRUE(data2);
+  EXPECT_EQ(data1, data2);
+
+  // After registering a new property, initial data should be invalidated,
+  // such that the new initial data is different.
+  RegisterProperty("--y", "<color>", "black", false);
+  EXPECT_NE(data1, GetStyleEngine().MaybeCreateAndGetInitialData());
 }
 
 }  // namespace blink
